# beman-readme-platforms

./: .pre-commit-config.yaml  README.md  pyproject.toml
beman_readme_platforms/: __init__.py  cli.py
beman_readme_platforms/lib/: __init__.py  matrix.py  readme.py  table.py
tests/: conftest.py  test_readme.py  test_table.py
