# SPDX-License-Identifier: Apache-2.0 WITH LLVM-exception

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "beman-readme-platforms"
version = "0.1.0"
description = "Generate a Markdown supported-platforms table from Beman CI matrix"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0 WITH LLVM-exception"}
authors = [
    {name = "The Beman Project", email = "beman@bemanproject.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
]

[project.scripts]
beman-readme-platforms = "beman_readme_platforms.cli:main"

[project.urls]
Homepage = "https://github.com/bemanproject/beman-readme-platforms"
Repository = "https://github.com/bemanproject/beman-readme-platforms"
